# mydia

./: .credo.exs  .dockerignore  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONCEPTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.e2e  README.md  TOUCH_NAV_BUG_ANALYSIS.md  compose.player-e2e.yml  compose.yml  deps.nix  dev  devenv.local.nix.example  devenv.nix  devenv.yaml  docker-entrypoint.sh  flake.nix  mix.exs  mix_quality.ex  mkdocs.yml
.antigravitycli/: a3c469f6-f004-40fe-be1e-7827f4c295e7.json
.devenv/: profile  run
.github/workflows/: ci-docker.yml  ci-nix.yml  ci-player-e2e.yml  ci-player.yml  ci-relay.yml  ci.yml  deploy-docs.yml  deploy-relay.yml  deploy-site.yml  release-relay.yml  release.yml
assets/: package-lock.json  package.json
assets/css/: app.css  mydiaTheme.ts
assets/js/: app.js
assets/js/hooks/: copy_to_clipboard.js  dock_nav.js
config/: config.example.yml  config.exs  dev.exs  runtime.exs  test.exs
docs/: index.md
docs/advanced/: cardigann.md  oidc.md
docs/brainstorms/: 2026-03-25-auto-file-renaming-brainstorm.md  2026-06-16-debrid-download-client-env-examples-requirements.md
docs/development/: e2e-testing.md  setup.md
docs/getting-started/: first-steps.md  quick-start.md
docs/overrides/: main.html
docs/plans/: 2026-03-25-feat-auto-file-renaming-on-import-plan.md  2026-05-13-001-feat-release-name-parser-v3-corpus-failures.md  2026-05-14-usenet-improvements-rollout-plan.md
docs/plugins/: authoring.md  cookbook.md  index.md  manifest.md
docs/reference/: api.md  environment-variables.md  remote-access.md
docs/solutions/logic-errors/: playback-progress-partial-hls-duration.md
docs/superpowers/plans/: 2026-06-28-unify-simplify-quality-profiles.md
docs/superpowers/specs/: 2026-06-28-unify-simplify-quality-profiles-design.md
docs/user-guide/: download-clients.md  indexers.md  users.md
infra/: config.yaml.example  deploy
lib/: mydia_web.ex
lib/mix/tasks/: mydia.cardigann_capture.ex  mydia.cardigann_compat.ex  mydia.cardigann_health.ex  mydia.migrate_episode_files.ex  mydia.migrate_tvdb_ids.ex  mydia.nfo_export.ex  mydia.parser.harvest.ex
lib/mydia/: accounts.ex  adult.ex  application.ex  books.ex  collections.ex  crash_reporter.ex  db.ex  downloads.ex  events.ex  feedback.ex  import_lists.ex  indexers.ex  integrations.ex  jobs.ex  library.ex  logger.ex  media.ex  media_requests.ex  metadata.ex  music.ex  playback.ex  plugins.ex  query_helpers.ex  settings.ex  subtitles.ex
lib/mydia/accounts/: api_key.ex  user.ex  user_preference.ex
lib/mydia/adult/: adult_file.ex  scene.ex  studio.ex
lib/mydia/books/: author.ex  book.ex  book_file.ex
lib/mydia/collections/: collection.ex  collection_item.ex  smart_rules.ex  smart_rules_fields.ex
lib/mydia/config/: loader.ex  schema.ex
lib/mydia/crash_reporter/: exit_error.ex  logger_backend.ex  throttle.ex  throw_error.ex  tower_reporter.ex
lib/mydia/downloads/: blacklists.ex  client.ex  client_health.ex  content_type.ex  download.ex  ffmpeg_mp4_transcoder.ex  history.ex  job_manager.ex  priority.ex  queue.ex  release_blacklist.ex  release_intake.ex  release_validator.ex  stall_detector.ex  torrent_hash.ex  torrent_matcher.ex  transcode_job.ex  transcoding.ex  untracked_matcher.ex
lib/mydia/feedback/: sender.ex
lib/mydia/hooks/: manager.ex
lib/mydia/import_lists/: import_list.ex  import_list_item.ex
lib/mydia/indexers/: cardigann_compat.ex  cardigann_definition.ex  cardigann_filters.ex  cardigann_health_check.ex  cardigann_parser.ex  cardigann_result_parser.ex  cardigann_search_engine.ex  cardigann_search_session.ex  cardigann_template.ex  flaresolverr.ex  quality_parser.ex  ranking_options.ex  release_ranker.ex  search_result.ex  search_scorer.ex
lib/mydia_web/: router.ex  schema.ex
metadata-relay/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  mix.exs
metadata-relay/assets/: package-lock.json  package.json
metadata-relay/config/: config.exs  dev.exs  runtime.exs  test.exs
native/mydia_p2p_core/: Cargo.toml
native/mydia_plugin_macros/: Cargo.toml
native/mydia_plugin_macros/src/: lib.rs
native/mydia_plugin_sdk/: Cargo.toml  sideload.sh
native/mydia_plugin_sdk/examples/minimal/: Cargo.toml
native/mydia_plugin_sdk/examples/minimal/src/: lib.rs
native/mydia_plugin_sdk/src/: lib.rs
native/mydia_plugin_sdk/wit/: plugin.wit
nix/: module.nix
nix/checks/: flake-module.nix
nix/devShells/: flake-module.nix
nix/modules/: flake-module.nix
nix/tests/: module-postgres.nix  module.nix
player/: pubspec.yaml
player/windows/: CMakeLists.txt
plugins/simkl_sync/: Cargo.toml
plugins/simkl_sync/src/: lib.rs
plugins/webhook_notifier/: Cargo.toml  README.md
plugins/webhook_notifier/src/: lib.rs
priv/graphql/: schema.graphql
priv/plugins/: simkl_sync.json  webhook_notifier.json  webhook_notifier.wasm
priv/release_parser/: audio.exs  codecs.exs  hdr.exs  languages.exs  release_groups.exs  sources.exs  streaming_services.exs
scripts/: benchmark_parser.exs  check-plugins.sh  harvest_sonarr_fixtures.exs  sample_bitmagnet_corpus.exs  test-nix.sh
site/: astro.config.mjs  package-lock.json  package.json
site/src/: content.config.ts
test/: mydia_quality_test.exs  test_helper.exs
test/mydia/: crash_reporter_test.exs  db_test.exs  downloads_test.exs  events_test.exs  feedback_test.exs  hooks_removed_test.exs  import_lists_test.exs  indexers_test.exs  library_test.exs  media_requests_test.exs  media_test.exs  metadata_test.exs  playback_test.exs  plugins_test.exs  settings_test.exs
test/mydia_web/: schema_test.exs
test/scripts/: harvest_sonarr_fixtures_test.exs
test/support/: blocking_transcoder.ex  cardigann_snapshot_helper.ex  data_case.ex  debrid_stub_provider.ex  feature_case.ex  indexer_mock.ex
test/support/fixtures/plugins/host_fns_fixture/: Cargo.toml
test/support/fixtures/plugins/host_fns_fixture/src/: lib.rs
test/support/fixtures/plugins/host_test_fixture/: Cargo.toml
test/support/fixtures/plugins/host_test_fixture/src/: lib.rs
(+681 files in other folders)
