[package]
name = "mydia-plugin-sdk"
version = "0.1.0"
edition = "2021"
description = "Mydia plugin authoring SDK: typed WASM component-model bindings and the #[mydia::plugin] macro for writing Mydia plugins in Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/getmydia/mydia"
# Published for external (community-repo) plugin authors. The canonical contract
# lives in wit/plugin.wit and is the single source of truth shared with the
# Elixir host. wit-bindgen generation + the #[mydia::plugin] macro land in U5/U6.

[lib]

[dependencies]
wit-bindgen = "0.58.0"
