# Bundled Simkl two-way watched-state sync plugin (U9). Built to wasm32-wasip2 by
# the :plugins mix compiler into priv/plugins/simkl_sync.wasm (nix toolchain;
# Docker dev lacks the wasip2 target).
[package]
name = "simkl_sync"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
mydia-plugin-sdk = { path = "../../native/mydia_plugin_sdk" }
tinyjson = "2"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
